--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,18 @@
 buildscript {
     ext {
-        compose_ui_version = '1.1.1'
+        compose_ui_version = '1.3.2'
+        room_version = "2.4.3"
+        kotlinx_coroutines_version = '1.3.8'
+        glide_version = "4.11.0"
+        material_version = "1.8.0-beta01"
+        gson_version = "2.8.9"
+        retrofit_version = "2.9.0"
+        hilt_version = '2.44'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.3.1' apply false
     id 'com.android.library' version '7.3.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
+    id 'com.google.dagger.hilt.android' version "$hilt_version" apply false
 }
