--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,6 +103,8 @@ dependencies {
     //Timber
     implementation 'com.jakewharton.timber:timber:5.0.1'
 
+    implementation 'com.google.firebase:firebase-messaging:23.1.2'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
