--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,6 +103,9 @@ dependencies {
     //Timber
     implementation 'com.jakewharton.timber:timber:5.0.1'
 
+    //Permission
+    implementation "com.google.accompanist:accompanist-permissions:0.25.1"
+
     implementation 'com.google.firebase:firebase-messaging:23.1.2'
 
     testImplementation 'junit:junit:4.13.2'
